<resources>
    <string name="app_name">Vava_Project</string>
    <string name="user_name">Username</string>
    <string name="log_button">Login</string>
    <string name="reg_button">Register</string>
    <string name="pass_text">Password</string>
    <string name="write_name">Write your username:</string>
    <string name="write_pass">Write your password:</string>
    <string name="write_reppassw">Repeat your password:</string>
    <string name="write_email">Write your email:</string>
    <string name="register_button">Register</string>
    <string name="acepted_req">Accepted</string>
    <string name="myreq_button">My request</string>
    <string name="map_req">Map view</string>
    <string name="menu_dis">Distance</string>
    <string name="menu_adres">Address</string>
    <string name="item_name">Item name</string>
    <string name="menu_description">Description</string>
    <string name="button_accept">Accept the order</string>
    <string name="create_st">Create</string>
    <string name="info">Info</string>
</resources>
